[gd_scene load_steps=3 format=3 uid="uid://bkgl5v8ijl362"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_07eop"]
[ext_resource type="FontFile" uid="uid://bkmn2h3knu02d" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_4vmwg"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.0
offset_top = -103.0
offset_right = -172.0
offset_bottom = -103.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.67999, 2.92)
size_flags_vertical = 4
script = ExtResource("1_07eop")
instant_start = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 128.0
offset_bottom = 80.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4vmwg")
text = "Start"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4vmwg")
text = "Settings"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4vmwg")
text = "Quit"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
